Number of clients in RTMP stats.

--- a/Moblin/Localizable.xcstrings
+++ b/Moblin/Localizable.xcstrings
@@ -1549,6 +1549,16 @@
         }
       }
     },
+    "%@ (%@) %lld" : {
+      "localizations" : {
+        "en" : {
+          "stringUnit" : {
+            "state" : "new",
+            "value" : "%1$@ (%2$@) %3$lld"
+          }
+        }
+      }
+    },
     "%lld %%" : {
       "localizations" : {
         "de" : {
