Configure human readable names for ethernet network interfaces.

--- a/Moblin/Localizable.xcstrings
+++ b/Moblin/Localizable.xcstrings
@@ -21281,6 +21281,9 @@
         }
       }
     },
+    "Interface" : {
+
+    },
     "Interval" : {
       "localizations" : {
         "de" : {
@@ -34212,6 +34215,9 @@
           }
         }
       }
+    },
+    "SRTLA" : {
+
     },
     "SRTLA server" : {
       "localizations" : {
