Move Chat, Audio level and SRTLA settings from Local overlays to Display.

--- a/Moblin/Localizable.xcstrings
+++ b/Moblin/Localizable.xcstrings
@@ -30931,6 +30931,7 @@
       }
     },
     "RTMP server bitrate" : {
+      "extractionState" : "stale",
       "localizations" : {
         "de" : {
           "stringUnit" : {
@@ -34217,6 +34218,9 @@
       }
     },
     "SRTLA" : {
+
+    },
+    "SRTLA interface names" : {
 
     },
     "SRTLA server" : {
