Rename SRTLA interface names to network interface names.

--- a/Moblin/Localizable.xcstrings
+++ b/Moblin/Localizable.xcstrings
@@ -26054,6 +26054,9 @@
         }
       }
     },
+    "Network interface names" : {
+
+    },
     "Network setup" : {
       "localizations" : {
         "de" : {
